<resources>
    <string name="app_name">TheSelflessApp</string>
    <string name="loading">Loading...</string>
    <string name="snap_memory">Snap a memory, give a memory.</string>
    <string name="already_register_login">Already Registered? Login</string>
    <string name="sign_up">Sign-Up With Your E-Mail</string>
    <string name="about_the_app">About The App</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="sign_ups">Sign-Up</string>
    <string name="select_gender">Select your gender..</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string-array name="gender_array">
        <item>@string/select_gender</item>
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string name="country_prompt">Select your country..</string>
    <string name="recent_check_in">Your Recent! Check-In Memory Feed</string>
    <string name="location_fragment">Location Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="checkIn_checkout">Check-In/Out</string>
    <string name="snap_a_memory">Snap A Memory</string>
    <string name="checkIn_memory_feed">View Your Check-In Memory Feed</string>
    <string name="done">Done</string>
    <string name="color_done">#D50000</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="retry">Retry</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_email">Please enter a valid e-mail address</string>
    <string name="enter_valid_country">Please select any country</string>
    <string name="enter_valid_gender">Please select gender</string>
    <string name="select_profile_pic">Choose photo</string>
    <string name="snap_memory_by">Memory Snapped By:</string>
    <string name="memory_taken_on">Memory Taken On: October 5th, 2016 | Memory Expire On: October 7th, 2016</string>
    <string name="downloading">Downloading....</string>
    <string name="recent_memory_given">Your Recent Memory Given</string>
    <string name="invalid_message">Invalid user, please try again</string>
    <string name="login_success">Login completed successfully.</string>
    <string name="edit_profile">Edit Your Profile</string>
    <string name="help_contacts">Help/Contact</string>
    <string name="memory_taken_ons">Memory Taken On:</string>
    <string name="memory_expire_on">Memory Expire On:</string>
    <string-array name="nav_drawer_labels">
        <item>@string/checkIn_checkout</item>
        <item>@string/snap_a_memory</item>
        <item>@string/checkIn_memory_feed</item>
        <item>@string/edit_profile</item>
        <item>@string/help_contacts</item>
        <item>LogOut</item>
    </string-array>
    <string-array name="country_arrays" formatted="false" translatable="false">
        <item>@string/country_prompt</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Canary Islands</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Ceuta and Melilla</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo [DRC]</item>
        <item>Congo [Republic]</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Côte d’Ivoire</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Europe</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latin America</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia [FYROM]</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar [Burma]</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Réunion</item>
        <item>Saint Barthélemy</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>São Tomé and Príncipe</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turks and Caicos Islands</item>
        <item>U.S. Outlying Islands</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Åland Islands</item>
    </string-array>
    <string name="top_rated_movies_topic">Oct 5th 2016 Check-In 7:41PM Check-Out 11:23PM</string>
    <string name="most_popular_movies_topic">Oct 5th 2016 Check-In 5:00PM Check-Out 5:23PM</string>
    <string name="edit">Save Profile</string>
    <string name="from">from</string>
    <string name="active_member">Active member since</string>
    <string name="message">Are you sure you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="help_contact">Help/Contact</string>
    <string-array name="top_rated_movies">
        <item>The Shawshank Redemption|Crime, Drama</item>
        <item>The Godfather|Crime, Drama</item>
        <item>The Dark Knight|Action, Crime, Drama</item>
        <item>Schindler\'s List|Biography, Drama, History</item>
    </string-array>
    <string-array name="most_popular_movies">
        <item>Batman v Superman: Dawn of Justice|Action, Adventure, Fantasy </item>
        <item>Captain America: Civil War|Action, Adventure, Sci-Fi</item>
        <item>10 Cloverfield Lane|Drama, Horror, Mystery</item>
        <item>Deadpool|Action, Adventure, Comedy</item>
    </string-array>
    <string name="remember_me">Remember Me</string>
</resources>