<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_cryan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">


            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_white_1000"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/md_black_1000" />


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/md_white_1000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/md_black_1000" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.theselflessapp.view.MaterialRippleLayout
                    android:id="@+id/checkbox_ripple"
                    style="@style/RippleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rippleColor="@color/material_grey_300">


                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />
                </com.theselflessapp.view.MaterialRippleLayout>


                <TextView
                    android:id="@+id/tv_remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/checkbox_ripple"
                    android:text="@string/remember_me"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />


            </RelativeLayout>


            <com.theselflessapp.view.MaterialRippleLayout
                style="@style/RippleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:rippleColor="@color/material_grey_300">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/login_active_code_btn_color"
                    android:enabled="false"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/md_white_1000"
                    android:textSize="18sp" />
            </com.theselflessapp.view.MaterialRippleLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/self_logo_transparent"
            android:gravity="center" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>