<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_black_cryan"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@drawable/self_logo_transparent"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="center"
                    card_view:cardBackgroundColor="@color/color_button_gray"
                    card_view:cardCornerRadius="50dp"
                    card_view:cardElevation="5dp"
                    card_view:cardUseCompatPadding="false"
                    card_view:contentPadding="2dp">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/profile_pic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        fresco:failureImage="@drawable/add_photo_default"
                        fresco:failureImageScaleType="fitCenter"
                        fresco:placeholderImage="@drawable/add_photo_default"
                        fresco:placeholderImageScaleType="fitCenter"
                        fresco:roundAsCircle="true" />


                </android.support.v7.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/edt_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/md_white_1000"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/md_black_1000" />


                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@color/md_white_1000"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/md_black_1000" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">


                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/md_white_1000"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/md_black_1000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <Spinner
                        android:id="@+id/spnr_country"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/md_white_1000"
                        android:entries="@array/country_arrays"
                        android:overlapAnchor="false"
                        android:textColor="@color/md_black_1000" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/drop_down_icon" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <Spinner
                        android:id="@+id/spnr_gender"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/md_white_1000"
                        android:entries="@array/gender_array"
                        android:overlapAnchor="false"
                        android:textColor="@color/md_black_1000" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/drop_down_icon" />
                </RelativeLayout>


                <com.theselflessapp.view.MaterialRippleLayout
                    style="@style/RippleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="35dp"
                    app:rippleColor="@color/material_grey_300">

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/login_active_code_btn_color"
                        android:enabled="false"
                        android:text="@string/sign_ups"
                        android:textAllCaps="true"
                        android:textColor="@color/md_white_1000"
                        android:textSize="18sp" />
                </com.theselflessapp.view.MaterialRippleLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>